--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Logiciel -
-			{{ title }}</title>
+		<title>{{ title }}</title>
 	</head>
 	<body>
-		<h1>Logiciel -
-			{{ title }}</h1>
-		<p>Voici une page HTML, complétée par le texte :
-			{{ text }}</p>
+		<h1>{{ title }}</h1>
+		<ul>
+			{% for user in users %}
+				<li>{{ user.email }}</li>
+			{% endfor %}
+		</ul>
 	</body>
 </html>
